--- a/ci/Jenkins/Jenkinsfile
+++ b/ci/Jenkins/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "devops-demo-project"
-            GIT_USER_NAME = "axdev"
+            GIT_USER_NAME = "axdev4591"
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
